# SerializePP

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/serializepp/: deserializer.h  serializer.h  spp.h  type_pass.h
include/serializepp/detail/: concepts.h  deserializer.h  deserializer_impl.h  deserializer_impl_algebraic.h  deserializer_impl_container.h  deserializer_impl_enum.h  deserializer_impl_numeric.h  serializer.h  serializer_impl.h  serializer_impl_algebraic.h  serializer_impl_container.h  serializer_impl_enum.h  serializer_impl_numeric.h  size_write_iterator.h  stream_iterator.h  value_identity.h
